# web_speech_recognition

./: CHANGELOG.rst  CMakeLists.txt  README.md  README_en.md  install.sh  package.xml
launch/: for_sobit_mini_en.launch  for_sobit_mini_jp.launch  web_speech_recognition_en.launch  web_speech_recognition_jp.launch
src/: bringup_chrome.py  web_speech_recognition_server_for_sobit_mini.py
srv/: SpeechRecognition.srv
www/: index.html  sobitsroslib.js  web_speech_recognition.js
